--- a/conf/ci.yaml
+++ b/conf/ci.yaml
@@ -24,3 +24,8 @@ remotes:
 
     # Add output of `hasura conf generate-remote` below this line
 
+    '{{ cluster.metadata.namespaces.user }}.frontendweb':
+    frontendweb:
+      dockerfile: microservices/frontendweb/Dockerfile
+      path: microservices/frontendweb
+
