--- a/conf/ci.yaml
+++ b/conf/ci.yaml
@@ -23,8 +23,8 @@ remotes:
         path: microservices/app
 
     # Add output of `hasura conf generate-remote` below this line
-    '{{ cluster.metadata.namespaces.user }}.frontendweb':
-      frontendweb:
-        dockerfile: microservices/frontendweb/Dockerfile
-        path: microservices/frontendweb
+    '{{ cluster.metadata.namespaces.user }}.ui':
+      ui:
+        dockerfile: microservices/ui/Dockerfile
+        path: microservices/ui
 
