--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -171,14 +171,14 @@ app:
     corsPolicy: allow_all
 
 
-frontendweb:
+ui:
   /:
     corsPolicy: allow_all
     upstreamService:
-      name: frontendweb
+      name: ui
       namespace: '{{ cluster.metadata.namespaces.user }}'
     upstreamServicePath: /
     upstreamServicePort: 80
-
+    
     
 # To see actual endpoints for these routes, use `$ hasura microserivce list`
