--- a/microservices/ui/k8s.yaml
+++ b/microservices/ui/k8s.yaml
@@ -5,9 +5,9 @@ items:
   metadata:
     creationTimestamp: null
     labels:
-      app: frontendweb
+      app: ui
       hasuraService: custom
-    name: frontendweb
+    name: ui
     namespace: '{{ cluster.metadata.namespaces.user }}'
   spec:
     replicas: 1
@@ -16,12 +16,12 @@ items:
       metadata:
         creationTimestamp: null
         labels:
-          app: frontendweb
+          app: ui
       spec:
         containers:
         - image: hasura/base-git-image:0.7
           imagePullPolicy: IfNotPresent
-          name: frontendweb
+          name: ui
           ports:
           - containerPort: 8080
             protocol: TCP
@@ -34,9 +34,9 @@ items:
   metadata:
     creationTimestamp: null
     labels:
-      app: frontendweb
+      app: ui
       hasuraService: custom
-    name: frontendweb
+    name: ui
     namespace: '{{ cluster.metadata.namespaces.user }}'
   spec:
     ports:
@@ -44,7 +44,7 @@ items:
       protocol: TCP
       targetPort: 8080
     selector:
-      app: frontendweb
+      app: ui
     type: ClusterIP
   status:
     loadBalancer: {}
