--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -180,13 +180,13 @@ ui:
     upstreamServicePath: /
     upstreamServicePort: 80
   
-  /testroute:
-    corsPolicy: allow_all
-    upstreamService:
-      name: testroute
-      namespace: '{{ cluster.metadata.namespaces.user }}'
-    upstreamServicePath: /testroute
-    upstreamServicePort: 80
+  # /testroute:
+  #   corsPolicy: allow_all
+  #   upstreamService:
+  #     name: testroute
+  #     namespace: '{{ cluster.metadata.namespaces.user }}'
+  #   upstreamServicePath: /testroute
+  #   upstreamServicePort: 80
     
     
 # To see actual endpoints for these routes, use `$ hasura microserivce list`
