--- a/microservices/app/k8s.yaml
+++ b/microservices/app/k8s.yaml
@@ -19,7 +19,7 @@ items:
           app: app
       spec:          
         env:
-          - name: zap_url
+          - name: ZAPURL
             valueFrom:
               secretKeyRef:
                 name: hasura-secrets
