--- a/microservices/ui/k8s.yaml
+++ b/microservices/ui/k8s.yaml
@@ -20,6 +20,9 @@ items:
       spec:
         containers:
         - image: hasura/base-git-image:0.7
+          env:
+            - name: CLUSTER_NAME 
+              value: {{ cluster.name }}
           imagePullPolicy: IfNotPresent
           name: ui
           ports:
