--- a/microservices/ui/k8s.yaml
+++ b/microservices/ui/k8s.yaml
@@ -22,7 +22,7 @@ items:
         - image: hasura/base-git-image:0.7
           env:
             - name: REACT_APP_CLUSTER_NAME 
-              value: {{ cluster.name }}
+              value: '{{ cluster.name }}'
           imagePullPolicy: IfNotPresent
           name: ui
           ports:
