Experiments with env vars

--- a/microservices/ui/k8s.yaml
+++ b/microservices/ui/k8s.yaml
@@ -22,7 +22,9 @@ items:
         - image: hasura/base-git-image:0.7
           env:
             - name: REACT_APP_CLUSTER_NAME 
-              value: '{{ cluster.name }}'
+              value: {{ cluster.name }}
+            - name: REACT_APP_TEST_VAR
+              value: 555
           imagePullPolicy: IfNotPresent
           name: ui
           ports:
