--- a/microservices/ui/k8s.yaml
+++ b/microservices/ui/k8s.yaml
@@ -24,7 +24,7 @@ items:
             - name: REACT_APP_CLUSTER_NAME 
               value: {{ cluster.name }}
             - name: REACT_APP_TEST_VAR
-              value: 555
+              value: "555"
           imagePullPolicy: IfNotPresent
           name: ui
           ports:
